@@ -1,0 +1,5 @@
+Makefile.in
+Makefile
+.deps
+_libs
+.libs
